# edulance

./: .env.sample  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django-ci.yml
.github_disabled/workflows/: django-ci.yml
client/: base.js
client/admin_panel/: admin_panel.css  admin_panel.js  apiEndpoints.js
client/collaborate/js/: collaborate.js
client/dashboard/css/: dashboard.css
client/dashboard/js/: dashboard.js
client/post/collaborate/: collaborate.css  collaborate.js
client/users/js/: login.js  register.js
collaborate/: apps.py  models.py  serializers.py  urls.py  views.py
collaborate/migrations/: 0001_initial.py
edulance/: asgi.py  settings.py  urls.py  wsgi.py
static/: base.css  base.js
static/dashboard/js/: dashboard.js
static/users/js/: login.js  register.js
staticfiles/: base.css
staticfiles/dashboard/js/: dashboard.js
staticfiles/js/: serviceworker.js
staticfiles/post/collaborate/: collaborate.js
staticfiles/post/post_detail/: post_detail.css
templates/: base.html
templates/admin/: admin_panel.html
templates/collaborate/: collaborate.html  post_detail.html
templates/users/: dashboard.html  login.html  register.html
tests/collaborate/: conftest.py  test_collaborate_backend.py
tests/dashboard/: conftest.py  test_dashboard_backend.py  test_dashboard_frontend.py
tests/users/: conftest.py  test_backend.py  test_frontend.py
users/: constants.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
